--- a/.github/workflows/ca_handler_tests_asa.yml
+++ b/.github/workflows/ca_handler_tests_asa.yml
@@ -36,8 +36,8 @@ jobs:
         sed -i "s/apache2/$WEB_SRV/g" .env
         cat .env
         docker network create acme
-        # docker-compose up -d
-        # docker-compose logs
+        docker-compose up -d
+        docker-compose logs
       env:
         WEB_SRV: ${{ matrix.websrv }}
         DB_HANDLER: ${{ matrix.dbhandler }}
